--- a/views/hello.erb
+++ b/views/hello.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Hello</title>
+    <title>Hello</title>
   </head>
   <body>
-    <p>Hello</p>
+    <h1>Hello World</p>
   </body>
 </html>
