Automatically backed up by Learn

--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Goodbye</title>
-  </head>
-  <body>
-    <p>Goodbye</p>
-  </body>
+  <% name = [Joe] %>
+  <% name.each do |name| %>
+    <h1><%= "Goodbye" + name %></h1>
+  <%end%>
+
+
 </html>
