Automatically backed up by Learn

--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
   <% name = [Joe] %>
   <% name.each do |name| %>
     <h1><%= "Goodbye" + name %></h1>
   <%end%>
 
-
+</head>
 </html>
