Automatically backed up by Learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title> Date </title>
-  </head>
-  <body>
-    <h1> Today </h1>
-  </body
-</html>
+@@ -0,0 +1,2 @@
+<% today = DateTime.now.strftime("The date is %A, %B %d, %Y") %>
+<p><%= today %></p>
