Automatically backed up by Learn

--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,8 +1,2 @@
-
-  <% name = ["Joe"] %>
-
-  <ul>
-    <% name.each do |name| %>
-      <h1><%= "Goodbye" + name %></h1>
-    <%end%>
-  </ul>
+<% name = "Joe" %>
+<h1><%= "Goodbye #{name}" %></h1>
